Add more themes for `flatlaf` and initialize the theme

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf-intellij-themes</artifactId>
+            <version>3.5.2</version>
+        </dependency>
     </dependencies>
 
 </project>
