--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
     <groupId>us.jonathans</groupId>
     <artifactId>mancala</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <testSourceDirectory>src/test/java/us/jonathans</testSourceDirectory>
+    </build>
 
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
